--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -1,39 +1,54 @@
-// Main Styles
-
-// See the other SASS partials for typography, variables etc.
-// CSS Grid is used for the layout with fallbacks for less capable browsers
-// declared beforehand, and a @supports feature query to reset fallbacks when
-// necessary. https://rachelandrew.co.uk/css/cheatsheets/grid-fallbacks
-
-// the body element is our primary layout grid
 body {
-  height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns:
-    [full-start] minmax(1rem, 1fr)
-    [main-start] minmax(0, 52rem) [main-end]
-    minmax(1rem, 1fr) [full-end];
+  display: flex;
+  background-image: linear-gradient(to right bottom, #9629be, #e40090, #ff385e, #ff7930, #ebb012);
+  background-attachment: fixed;
+  flex-direction:column;
+  align-items: center;
+  min-height: 100vh;
+  justify-content: space-between;
 }
 
 // by default, make any new children of body to span the full track
 body > * {
-  grid-column: full;
   padding: 2rem 1rem;
 }
 
 // header, the first grid row
 // it is also a grid for the logo and nav
 header {
-  grid-column: full;
-  display: grid;
-  background-color: $brand-color;
+  display: flex;
+  background-color: #ffffff4d;
+  backdrop-filter: blur(10px);
   padding: 2rem;
+  position:fixed;
+  width:100%;
+  justify-content: space-between;
   @media screen and (min-width: $screen-sm-min) {
-    grid-template-columns: 1fr auto;
-    grid-column-gap: 1rem;
+    
   }
 }
+
+.intro-home{
+  display:flex;
+  flex-direction:row;
+  
+}
+.intro-home .col{
+  display:flex;
+  max-width:600px;
+}
+.intro-home .col:nth-child(1) {
+  flex-direction:column;
+  justify-content: center;
+  width:40%;
+}
+.intro-home .col:nth-child(1) h1{
+  font-size:50px;
+}
+.intro-home .col:nth-child(2) {
+  width:60%;
+}
+
 
 // logo, is a grid item
 header > h1 {
@@ -47,6 +62,7 @@ header > h1 {
     text-decoration: none;
     border: 0;
     color: white;
+    font-size: 16px;
     @media screen and (min-width: $screen-sm-min) {
       padding: 1rem;
     }
@@ -56,10 +72,45 @@ header > h1 {
   }
 }
 
+header > nav ul ul{
+    display:none;
+    background: #000;
+    position: absolute;
+    backdrop-filter: blur(20px);
+    color: #000;
+    filter: invert(1);
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+header > nav ul ul li a{
+  font-size: 16px;
+}
+
+header > nav li:hover > ul{
+    display:flex;
+    flex-direction:column;
+}
+
+header > nav ul{
+  @media screen and (max-width: $screen-lg-min) {
+    flex-direction: column;
+    z-index: 99999;
+    background: #ccc;
+    padding: 50px 15px;
+  }
+}
+
 // main menu, is a grid item
 header > nav {
-  @media screen and (min-width: $screen-sm-min) {
-    float: right;
+  @media screen and (max-width: $screen-lg-min) {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    left: 0;
+    top: 0;
+    width: 100%;
   }
   ul {
     // flexbox is better than grid for distributing an unknown qty of children
@@ -92,26 +143,16 @@ header > nav {
 // our main content wrapper, the width scales with font size
 main {
   width: 100%;
-  max-width: 52rem;
-  margin-right: auto;
-  margin-left: auto;
-  grid-column: main;
-  display: grid;
+  max-width: 75vw;
+  display: flex;
   padding-top: 8rem;
   padding-bottom: 8rem;
+  flex-direction: column;
   @media screen and (min-width: $screen-md-min) {
     align-content: start;
   }
 }
 
-// reset breaking fallbacks (e.g. widths) if CSS Grid is supported
-// float, inline-block, table properties are already ignored by CSS Grid
-@supports (display: grid) {
-  main {
-    width: auto;
-    max-width: none;
-  }
-}
 
 // blog posts list
 html[data-current="blog"] main > section {
@@ -141,7 +182,7 @@ nav[aria-label="Adjacent Posts"] {
 
 // contact form
 html[data-current="contact"] main > form {
-  display: grid;
+  display: flex;
   label {
     display: none;
   }
@@ -169,14 +210,12 @@ html[data-current="contact"] main > form {
 }
 
 footer {
-  grid-column: full;
-  display: grid;
-  grid-template-columns:
-    [full-start] minmax(1rem, 1fr)
-    [main-start] minmax(0, 50rem) [main-end]
-    minmax(1rem, 1fr) [full-end];
-  background-color: $grey-bg-color;
+  display: flex;
+  background-color: #0e0e0e;
+  width:100%;
+  justify-content: center;
   > small {
-    grid-column: main;
+    grid-column: flex;
+    text-align: center; 
   }
 }
