--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -1,8 +1,8 @@
 // site colours
-$text-color: rgb(40,40,40);
+$text-color: rgb(255, 255, 255);
 $text-color-negative: white;
-$brand-color: rgb(29,37,52);
-$link-color: rgb(0,114,154);
+$brand-color: rgb(255, 255, 255);
+$link-color: rgb(255, 255, 255);
 $link-hover-color: rgb(0,57,78);
 $grey-bg-color: rgb(243,243,243);
 $hairline-color: rgb(230,230,230);
