change header footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header>
 
-  <h1>
-    <a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-  </h1>
+  <img onclick="location.href='../../';" style="width:120px" src="https://res.cloudinary.com/wola/image/upload/v1656327536/wola/logo-wola-granada.svg"/>>
+
 
   <nav>
     {% include navigation.html navigation=site.data.navigation %}
