--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
 
-  <img onclick="location.href='../../';" style="width:120px" src="https://res.cloudinary.com/wola/image/upload/v1656327536/wola/logo-wola-granada.svg"/>>
+  <img onclick="location.href='../../';" style="width:120px" src="https://res.cloudinary.com/wola/image/upload/v1656327536/wola/logo-wola-granada.svg"/>
 
 
   <nav>
