--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -23,6 +23,7 @@ header {
   position:fixed;
   width:100%;
   justify-content: space-between;
+  z-index: 999999;
   @media screen and (min-width: $screen-sm-min) {
     
   }
