--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -221,3 +221,12 @@ footer {
     text-align: center; 
   }
 }
+
+// styles
+
+.container-home{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
