--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -229,4 +229,6 @@ footer {
   left: 0;
   top: 0;
   width: 100%;
+  -webkit-mask-image: linear-gradient(0deg,transparent 10px,#000 30%,#000 90%,transparent);
+    
 }
