--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,34 @@
 
 
   <nav>
-    {% include navigation.html navigation=site.data.navigation %}
+      <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
+        <label for="nav-toggle" class="navigation__button">
+          <span class="navigation__icon" aria-label="toggle navigation menu"></span>
+        </label>
+        <div class="navigation__background"></div>
+
+        <nav class="navigation__nav" role="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="#" class="navigation__link"><span>01</span>Sobre</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link"><span>02</span>Habilidades</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link"><span>03</span>Trabalhos</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link"><span>04</span>Eventos</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link"><span>05</span>Contato</a>
+            </li>
+      </ul>
+    </nav>
+  </div>
+   
   </nav>
 
 </header>
