--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -63,8 +63,8 @@ header > h1 {
 
 .navigation__button {
   position: fixed;
-  top: 1.5rem;
-  right: 1.5rem;
+  top: 10px;
+  right: 20px;
   height: 5rem;
   width: 5rem;
   text-align: center;
@@ -77,19 +77,19 @@ header > h1 {
 
 @media screen  and (min-width: 768px) {
   .navigation__button {
-      top: 4rem;
-      right: 4rem;
-      height: 7rem;
-      width: 7rem;
+    top: 10px;
+    right: 20px;
+    height: 5rem;
+    width: 5rem;
   }
 }
 
 .navigation__background {
   position: fixed;
-  top: 2rem;
-  right: 2rem;
-  height: 3rem;
-  width: 3rem;
+  top: 17px;
+  right: 26px;
+  height: 4rem;
+  width: 4rem;
   border-radius: 50%;
   background: #4A676A;
   background-size: cover;
@@ -100,10 +100,10 @@ header > h1 {
 
 @media screen and (min-width: 768px) {
   .navigation__background {
-      top: 4.5rem;
-      right: 4.5rem;
-      height: 6rem;
-      width: 6rem;
+    top: 17px;
+    right: 26px;
+    height: 4rem;
+    width: 4rem;
   }
 }
 
