--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -175,12 +175,12 @@ header > h1 {
 .navigation__icon {
 
   position: relative;
-  margin-top: 2.5rem;
+  margin-top: 35px;
 }
 
 @media screen and (min-width: 768px) {
   .navigation__icon {
-      margin-top: 3.5rem;
+    margin-top: 35px;
   }
 }
 
