--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -143,6 +143,7 @@ header > h1 {
   font-size: 40px;
   text-decoration: none;
   transition: all .2s;
+  border: 0;
 }
 
 @media(min-width: 768px) {
