--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -65,8 +65,8 @@ header > h1 {
   position: fixed;
   top: 5px;
   right: 20px;
-  height: 4rem;
-  width: 4rem;
+  height: 56px;
+  width:56px;
   text-align: center;
   background-color: #fff;
   border-radius: 50%;
@@ -79,8 +79,8 @@ header > h1 {
   .navigation__button {
     top: 5px;
     right: 20px;
-    height: 4rem;
-    width: 4rem;
+    height: 56px
+    width: 56px;
   }
 }
 
