--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -79,7 +79,7 @@ header > h1 {
   .navigation__button {
     top: 5px;
     right: 20px;
-    height: 56px
+    height: 56px;
     width: 56px;
   }
 }
