--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,19 +14,22 @@
         <nav class="navigation__nav" role="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="#" class="navigation__link"><span>01</span>Sobre</a>
+              <a href="#" class="navigation__link">Agencia</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link"><span>02</span>Habilidades</a>
+              <a href="#" class="navigation__link">Portfolio</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link"><span>03</span>Trabalhos</a>
+              <a href="#" class="navigation__link">Servicios</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link"><span>04</span>Eventos</a>
+              <a href="#" class="navigation__link">Blog</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link"><span>05</span>Contato</a>
+              <a href="#" class="navigation__link">Contato</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Kit Digital</a>
             </li>
       </ul>
     </nav>
